<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FreeDaysActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/mixed_waves">
            <include
                layout="@layout/toolbarsear">

            </include>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/chooseextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/choosedesireddates"
                    android:textColor="?text"
                    android:textStyle="bold"
                    android:textSize="24dp"/>
            </androidx.cardview.widget.CardView>

            <com.savvi.rangedatepicker.CalendarPickerView

                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:layout_margin="8dp"
                android:clipToPadding="false"

                android:scrollbarStyle="outsideOverlay"
                app:tsquare_dividerColor="@color/transparent"
                app:tsquare_headerTextColor="@color/custom_header_text"
                app:tsquare_orientation_horizontal="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_marginStart="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/redcercle"
            />
                <TextView
                    android:id="@+id/textViewnote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cantchoosered"
                    android:textAlignment="gravity"
                    android:textColor="?text"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/choosendaysare"
                    android:textAlignment="center"
                    android:textColor="?text"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/choosendays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:textColor="?text"
                    android:textStyle="bold"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center"
                android:layout_margin="35dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_margin="10dp"
                        android:background="@drawable/border"
                        android:padding="5dp"
                        android:text="@string/bookpayinsu"

                        android:textColor="?text"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>